workloads/medium-place/calibre-web/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: calibre-web
  namespace: medium-place
  labels:
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/part-of: calibre-web
    app.kubernetes.io/version: 0.6.19

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
      app.kubernetes.io/part-of: calibre-web

  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
      labels:
        app.kubernetes.io/name: calibre-web
        app.kubernetes.io/part-of: calibre-web
        app.kubernetes.io/version: 0.6.19

    spec:
      securityContext:
        fsGroup: 911
            
      containers:
        - name: calibre-web
          image: linuxserver/calibre-web:0.6.19

          volumeMounts:
            - name: data
              mountPath: /config
              subPath: config 
            - name: data 
              mountPath: /books
              subPath: books

          ports:
            - name: http
              protocol: TCP
              containerPort: 8083

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
